# atcoder-util

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: contest.rs  fetch_sample_cases.rs  file_utils.rs  lib.rs  main.rs  problem.rs  sample_cases.rs
src/tester/: mod.rs  run_test.rs
tests/: test_fetch_problem.rs  test_run_program.rs
tests/code/: a.cpp  b.cpp  c.cpp  d.cpp
