[package]
name = "atcoder-util"
version = "0.1.0"
authors = ["Yuta Nagaoka <wani0202nvkdi@gmail.com>"]
repository = "https://github.com/YutaNagaoka/atcoder-util"
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "Utility command for AtCoder."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
scraper = "0.11.0"
clap = "2.33.0"
