[package]
name = "atcoder-util"
version = "0.3.2"
authors = ["Yuta Nagaoka <wani0202nvkdi@gmail.com>"]
repository = "https://github.com/YutaNagaoka/atcoder-util"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/atcoder-util"
description = "Utility command for AtCoder."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
scraper = "0.11.0"
clap = "2.33.0"
colored = "1.9.0"
